<resources>
    <string name="app_name">Recipely</string>
    <string name="logoDesc">Application logo</string>
    <string name="splashText">Please wait while we \n sorting out our fridge.</string>
    <string name="loginTextTop">Welcome Back!</string>
    <string name="loginTextBottom">Log in to view meals you going to make</string>
    <string name="emailAddress">Email Address</string>
    <string name="pass">Password</string>
    <string name="cPass">Confirm Password</string>
    <string name="name">Username</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="log">Log In</string>
    <string name="logout">Log out</string>
    <string name="connectWith">Or connect with</string>
    <string name="doNotHaveAcc">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="regPageTop">Let\'s Get Started</string>
    <string name="regPage2Top">Create an account to start discover new recipes</string>
    <string name="create">Create</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="search">Search more recipes</string>
    <string name="navBarOpen">Open navigation bar</string>
    <string name="navBarClose">Close navigation bar</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgotPassText">Please enter your email registered with Recipely account and click the link to change your password</string>
    <string name="submit">Submit</string>
    <string name="textPopupTopForgot">All done!</string>
    <string name="textPopupBotForgot">Just check your email and click the link!</string>
    <string name="home">Home</string>
    <string name="recipe">Recipe</string>
    <string name="ingred">Ingredient</string>
    <string name="fridge">Fridge</string>
    <string name="guide">User Guide</string>
    <string name="acc">Account</string>
    <string name="What">What\'s</string>
    <string name="onYourFridge">On your fridge right now?</string>
    <string name="searchIngredient">Search your ingredient</string>
    <string name="vegetable">Vegetables</string>
    <string name="fruit">Fruits</string>
    <string name="beverage">Beverages</string>
    <string name="soup">Soups</string>
    <string name="nuts">Nuts</string>
    <string name="mushroom">Mushroom</string>
    <string name="berries">Berries</string>
    <string name="dairy">Dairy</string>
    <string name="Eggs">Eggs</string>
    <string name="Meat">Meat</string>
    <string name="VegetableTxt">Select the ingredient that you have</string>
    <string name="expiry">Expiry: 30 days</string>
    <string name="popular">Popular Recipes</string>
    <string name="from">From Your Fridge</string>
    <string name="see">See</string>
    <string name="fridgetext">Ingredient on your fridge</string>
    <string name="hint">Tips: If you add an existing ingredient on your fridge, we will detect as you resupply your ingredient. The expiry date will be reset</string>
    <string name="noData">We can\'t find any ingredient in your fridge. Try add some ingredient.</string>
    <string name="noAPI">We can\'t find recipe because your fridge is empty. Try add some ingredient into your fridge to explore recipe you can make right now</string>
    <string name="expiryNote">You have some ingredient that expiring its expiration date</string>
    <string name="garlic">Garlic</string>
    <string name="onion">Onion</string>
    <string name="lettuce">Lettuce</string>
    <string name="bellPep">Bell Pepper</string>
    <string name="tomato">Tomato</string>
    <string name="CTomato">Cherry Tomato</string>
    <string name="broccoli">Broccoli</string>
    <string name="chili">Chili</string>
    <string name="carrot">Carrot</string>
    <string name="beetroot">BeetRoot</string>
    <string name="radish">Radish</string>
    <string name="mangetout">MangeTout</string>
    <string name="parsley">Parsley</string>
    <string name="spinach">Spinach</string>
    <string name="potato">Potato</string>
    <string name="basil">Basil</string>
    <string name="springonion">Spring Onion</string>
    <string name="cayennepepper">Cayenne Pepper</string>
    <string name="asparagus">Asparagus</string>
    <string name="avocado">Avocado</string>
    <string name="cabbage">Cabbage</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="celery">Celery</string>
    <string name="cucumber">Cucumber</string>
    <string name="corn">Corn</string>
    <string name="fennel">Fennel</string>
    <string name="parsnip">Parsnip</string>
    <string name="peas">Peas</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="swede">Swede</string>
    <string name="turnip">Turnip</string>
    <string name="button">Button</string>
    <string name="cremini">Cremini</string>
    <string name="portobello">Portobello</string>
    <string name="shiitake">Shiitake</string>
    <string name="oyster">Oyster</string>
    <string name="porcini">Porcini</string>
    <string name="morel">Morel</string>
    <string name="enoki">Enoki</string>
    <string name="chanterelle">Chanterelle</string>
    <string name="maitake">Maitake</string>
    <string name="BEChilli">Bird Eye Chili</string>
    <string name="greenChilli">Green Chili</string>
    <string name="pistachios">Pistachios</string>
    <string name="hazelnuts">Hezelnuts</string>
    <string name="cashews">Cashews</string>
    <string name="walnuts">Walnuts</string>
    <string name="marconaalmonds">Marcona Almonds</string>
    <string name="macdamia">Macadamia Nuts</string>
    <string name="peanuts">Peanuts</string>
    <string name="almonds">Almonds</string>
    <string name="brazil">Brazil Nuts</string>
    <string name="pine">Pine Nuts</string>
    <string name="pecans">Pecans</string>
    <string name="cheese">Cheese</string>
    <string name="butter">Butter</string>
    <string name="cream">Cream</string>
    <string name="ghee">Ghee</string>
    <string name="liquidmilk">Liquid Milk</string>
    <string name="fermentedmilk">Fermented Milk</string>
    <string name="condensedmilk">Condensed Milk</string>
    <string name="evaporatedmilk">Evaporated Milk</string>
    <string name="casein">Casein</string>
    <string name="yogurt">Yogurt</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="chorizo">Chorizo</string>
    <string name="steak">Steak</string>
    <string name="goat">Goat</string>
    <string name="lamb">Lamb</string>
    <string name="mutton">Mutton</string>
    <string name="meatball">Meatball</string>
    <string name="paultry">Paultry</string>
    <string name="sausage">Sausage</string>
    <string name="portabello">Portabello Cap Mushroom</string>
    <string name="canned">Canned Mushroom</string>
    <string name="buttonM">Button Mushroom</string>
    <string name="chesnut">Chestnut Mushroom</string>
    <string name="Oyster">Oyster Mushroom</string>
    <string name="whiteMush">White Mushroom</string>
    <string name="babyB">Baby Bella Mushroom</string>
    <string name="mixed">Mixed Mushroom</string>
    <string name="porciniMush">Porcini Mushroom</string>
    <string name="driedMush">Dried Mushroom</string>
    <string name="brownMush">Brown Mushroom</string>
    <string name="creminiMush">Cremini Mushroom</string>
    <string name="Shiitake">Shiitake Mushroom</string>
    <string name="seafood">Seafood</string>
    <string name="artic">Artic Char</string>
    <string name="Bream">Bream</string>
    <string name="clams">Clams</string>
    <string name="Cod">Cod</string>
    <string name="Crab">Crab</string>
    <string name="Crayfish">Crayfish</string>
    <string name="Hake">Hake</string>
    <string name="Haddock">Haddock</string>
    <string name="Halibut">Halibut</string>
    <string name="Lobster">Lobster</string>
    <string name="Mackerel">Mackerel</string>
    <string name="mahi">Mahi Mahi</string>
    <string name="Monkfish">Monkfish</string>
    <string name="Octopus">Octopus</string>
    <string name="Oysteer">Oyster</string>
    <string name="Plaice">Plaice</string>
    <string name="Pollack">Pollack</string>
    <string name="Prawns">Prawns</string>
    <string name="Salmon">Salmon</string>
    <string name="Sardine">Sardine</string>
    <string name="Scallop">Scallop</string>
    <string name="Seaweed">Seaweed</string>
    <string name="Shrimp">Shrimp</string>
    <string name="Squid">Squid</string>
    <string name="Sturgeon">Sturgeon</string>
    <string name="Tuna">Tuna</string>
    <string name="Trout">Trout</string>
    <string name="banana">Banana</string>
    <string name="Lemon">Lemon</string>
    <string name="Peach">Peach</string>
    <string name="BlackPlum">Black Plum</string>
    <string name="Orange">Orange</string>
    <string name="Apricot">Apricot</string>
    <string name="DriedFruit">Dried Fruit</string>
    <string name="RedPlum">Red Plum</string>
    <string name="MixBerries">Mix Berries</string>
    <string name="Blueberries">Blueberries</string>
    <string name="Strawberries">Strawberries</string>
    <string name="Fig">Fig</string>
    <string name="Cantaloupe">Cantaloupe</string>
    <string name="HoneydewMelon">Honeydew Melon</string>
    <string name="Apple">Apple</string>
    <string name="Pineapple">Pineapple</string>
    <string name="Avocado">Avocado</string>
    <string name="Blackberries">Blackberries</string>
    <string name="Raspberries">Raspberries</string>
    <string name="Mango">Mango</string>
    <string name="Blackcurrant">Blackcurrant</string>
    <string name="DateFruit">Date Fruit</string>
    <string name="Durian">Durian</string>
    <string name="Grapes">Grapes</string>
    <string name="Guava">Guava</string>
    <string name="Kiwi">Kiwi</string>
    <string name="Lychee">Lychee</string>
    <string name="Mangosteen">Mangosteen</string>
    <string name="Papaya">Papaya</string>
    <string name="Pear">Pear</string>
    <string name="Watermelon">Watermelon</string>
    <string name="DragonFruit">Dragon Fruit</string>
    <string name="Prunes">Prunes</string>
    <string name="Tamarind">Tamarind</string>
    <string name="addItem">Add item into fridge</string>
    <string name="item">0 item</string>
    <string name="add">Add</string>
    <string name="cantFind">Can\'t find your ingredient?</string>
    <string name="cantText">Your ingredient might currently added by our team for next update. Try send us feedback on what ingredient you want us to add next.</string>
    <string name="title_activity_vegetables_ingred">vegetables_ingred</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clear">Clear my fridge</string>
    <string name="myAcc">My Account</string>
    <string name="accText">Setup your account here</string>
    <string name="email">Your Email :</string>
    <string name="clearFr">We are going to take out all the item and clear your ingredient from your fridge</string>
    <string name="ClearIng">Clear Ingredient</string>
    <string name="change">Change Password</string>
    <string name="feedback">Leave us feedback</string>
    <string name="feedbackText">We would like to hear from you about our product. Let us know what we\'re getting right and what we can improve</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="username">Username</string>
    <string name="accEmail">Email</string>
    <string name="SaveChange">Save Change</string>
</resources>