<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_login"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTextTop"
        android:textSize="26sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTextBottom"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"/>

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/user_icon_vector"
        android:drawablePadding="10dp"
        android:hint="@string/emailAddress"
        android:background="@drawable/inputtextlogin"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"/>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:drawableStart="@drawable/pass_icon_vector"
        android:drawablePadding="10dp"
        android:background="@drawable/inputtextlogin"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/forgotPass"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:background="@drawable/buttonbg"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectWith"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:layout_weight="0"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:layout_marginTop="100dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doNotHaveAcc"
        android:layout_gravity="center" android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/signUpPage"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto"
            android:text="@string/signUp"
            android:textColor="#FF5D36"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>