<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingred_veg"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetable"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FF5D36"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VegetableTxt"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vegItemGarlic"
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garlic"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/vegItemOnion"
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onion"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lettuce"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bellPep"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/broccoli"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CTomato"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:background="@drawable/ingredient_itembg"
                    android:elevation="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chili"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:weightSum="3"
        android:background="@drawable/additembg">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="@string/addItem"/>

            <TextView
                android:id="@+id/itemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="#fff"
                android:textSize="18sp"
                android:text="@string/item"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:id="@+id/addBtn"
                android:background="@drawable/googlebtnbg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="#FF5D36"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>