<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account_account_node"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myAcc"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FF5D36"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accText"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accEmail"
        android:layout_marginStart="32dp"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/googlebtnbg"
        android:elevation="3dp"
        android:textSize="18sp"
        android:padding="8dp"
        android:ems="10"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="32dp"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/googlebtnbg"
        android:elevation="3dp"
        android:textSize="18sp"
        android:padding="8dp"
        android:ems="10"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    <Button-->
<!--        android:id="@+id/debugButton"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Debug"-->
<!--        android:background="@drawable/buttonbg"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_gravity="center"-->
<!--        android:textAllCaps="false"-->
<!--        android:layout_marginBottom="10dp"/>-->

    <LinearLayout
        android:background="@drawable/settingbg"
        android:elevation="3dp"
        android:id="@+id/save"
        android:clickable="true"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveChange"
            android:textSize="18sp"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_save_24" />
    </LinearLayout>

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:background="@drawable/buttonbg"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/LogOutBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/buttonbg"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp"/>
</LinearLayout>