<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clearFridge"
    android:orientation="vertical"
    android:weightSum="5">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/empty"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="26sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearFr"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/ClearIng"
        android:background="@drawable/buttonbg"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp"/>
</LinearLayout>